Replace Spectrum with Grindery (email)

--- a/built-email-templates/communityInvite.html
+++ b/built-email-templates/communityInvite.html
@@ -67,7 +67,7 @@
                 <tr>
                   <td class="content-cell" style="word-break:break-word">
                     <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left">{{sender.name}} has invited you to join the <a href="https://chat.grindery.io/{{ community.slug }}" style="color:#7B16FF; text-decoration:none">{{community.name}}
-                        community</a> on Spectrum! Join now to get started.</p>
+                        community</a> on Grindery! Join now to get started.</p>
                   </td>
                 </tr>
 
@@ -120,7 +120,7 @@
             <td style="word-break:break-word">
               <ul style="line-height:1.4; margin:24px 0; padding:0; text-align:left; list-style-type:none" align="left">
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://twitter.com/withspectrum" style="color:#1D2129; text-decoration:none">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery" style="color:#1D2129; text-decoration:none">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li style="font-size:14px; margin:8px 0">
@@ -128,7 +128,7 @@
                     a feature</a>
                 </li>
               </ul>
-              <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">Spectrum is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA 94107<br>United
+              <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">Grindery is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA 94107<br>United
                 States
               </p>
             </td>
