--- a/built-email-templates/mentionInMessage.html
+++ b/built-email-templates/mentionInMessage.html
@@ -147,7 +147,7 @@
           <tr>
             <td style="word-break:break-word">
               <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">
-                You are receiving this email because you joined <a href="https://chat.grindery.io" style="color:#1D2129; text-decoration:none">Spectrum</a>. If you no
+                You are receiving this email because you joined <a href="https://chat.grindery.io" style="color:#1D2129; text-decoration:none">Grindery</a>. If you no
                 longer want to receive emails like this, you can:
               </p>
 
@@ -166,14 +166,14 @@
 
                 {{#recipient.username}}
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://chat.grindery.io/users/{{ . }}/settings" style="color:#1D2129; text-decoration:none">Manage your email preferences on Spectrum</a>
+                  <a href="https://chat.grindery.io/users/{{ . }}/settings" style="color:#1D2129; text-decoration:none">Manage your email preferences on Grindery</a>
                 </li>
                 {{/recipient.username}}
               </ul>
 
               <ul style="line-height:1.4; margin:24px 0; padding:0; text-align:left; list-style-type:none" align="left">
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://twitter.com/withspectrum" style="color:#1D2129; text-decoration:none">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery" style="color:#1D2129; text-decoration:none">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li style="font-size:14px; margin:8px 0">
@@ -182,7 +182,7 @@
                 </li>
               </ul>
 
-              <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">Spectrum is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA 94107<br>United
+              <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">Grindery is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA 94107<br>United
                 States</p>
             </td>
           </tr>
