--- a/built-email-templates/newDirectMessage.html
+++ b/built-email-templates/newDirectMessage.html
@@ -91,7 +91,7 @@
                 <tr>
                   <td class="footer-cell" style="word-break:break-word; padding:24px">
                     <p class="emoji" style="line-height:1.6; text-align:left; color:#171A21; font-size:32px; margin:0; margin-bottom:16px; padding:0; vertical-align:middle" align="left" valign="middle">✌️</p>
-                    <p style="line-height:1.5em; text-align:left; color:#171A21; font-size:16px; margin:0; margin-bottom:16px; padding:0" align="left">- The Spectrum team</p>
+                    <p style="line-height:1.5em; text-align:left; color:#171A21; font-size:16px; margin:0; margin-bottom:16px; padding:0" align="left">- The Grindery team</p>
                   </td>
                 </tr>
               </table>
@@ -102,7 +102,7 @@
           <tr>
             <td class="content-cell" style="word-break:break-word; padding:8px 24px">
               <p class="sub" style="line-height:1.5em; text-align:left; color:#747E8D; font-size:14px; margin:0; margin-bottom:16px; padding:0" align="left">
-                You are receiving this email because you joined <a href="https://chat.grindery.io" style="color:#1D2129; text-decoration:none">Spectrum</a>. If you no
+                You are receiving this email because you joined <a href="https://chat.grindery.io" style="color:#1D2129; text-decoration:none">Grindery</a>. If you no
                 longer want to receive emails like this, you can:
               </p>
 
@@ -120,14 +120,14 @@
 
                 {{#username}}
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://chat.grindery.io/users/{{ . }}/settings" style="color:#1D2129; text-decoration:none">Manage your email preferences on Spectrum</a>
+                  <a href="https://chat.grindery.io/users/{{ . }}/settings" style="color:#1D2129; text-decoration:none">Manage your email preferences on Grindery</a>
                 </li>
                 {{/username}}
               </ul>
 
               <ul style="line-height:1.4; text-align:left; list-style-type:none; margin:24px 0; padding-left:0" align="left">
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://twitter.com/withspectrum" style="color:#1D2129; text-decoration:none">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery" style="color:#1D2129; text-decoration:none">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li style="font-size:14px; margin:8px 0">
@@ -136,7 +136,7 @@
                 </li>
               </ul>
 
-              <p class="sub" style="line-height:1.5em; text-align:left; color:#747E8D; font-size:14px; margin:0; margin-bottom:16px; padding:0" align="left">Spectrum is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA
+              <p class="sub" style="line-height:1.5em; text-align:left; color:#747E8D; font-size:14px; margin:0; margin-bottom:16px; padding:0" align="left">Grindery is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA
                 94107<br> United States</p>
             </td>
           </tr>
