--- a/email-templates/communityInvite.html
+++ b/email-templates/communityInvite.html
@@ -386,7 +386,7 @@
                 <tr>
                   <td class="content-cell">
                     <p>{{sender.name}} has invited you to join the <a href="https://chat.grindery.io/{{community.slug}}">{{community.name}}
-                        community</a> on Spectrum! Join now to get started.</p>
+                        community</a> on Grindery! Join now to get started.</p>
                   </td>
                 </tr>
 
@@ -439,7 +439,7 @@
             <td>
               <ul>
                 <li>
-                  <a href="https://twitter.com/withspectrum">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li>
@@ -447,7 +447,7 @@
                     a feature</a>
                 </li>
               </ul>
-              <p>Spectrum is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
+              <p>Grindery is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
                 States
               </p>
             </td>
