--- a/email-templates/newCommunityWelcome.html
+++ b/email-templates/newCommunityWelcome.html
@@ -382,7 +382,7 @@
 
 <body>
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    Your {{community.name}} is live on Spectrum!
+    Your {{community.name}} is live on Grindery!
   </div>
 
   <!-- Insert &zwnj;&nbsp; hack after hidden preview text -->
@@ -414,20 +414,20 @@
                   <td class="content-cell">
                     <p class="emoji large">✨</p>
                     <h1 class="title"><a href="https://chat.grindery.io/{{community.slug}}"><b>{{community.name}}</a> is
-                      live on Spectrum!</b></h1>
+                      live on Grindery!</b></h1>
                     <p>But it's pretty quiet in there right now - share {{community.name}} to get the conversation
                       started!</p>
 
                     <table class="button-group" width="100%">
                       <tr>
                         <td>
-                          <a class="button button-twitter" href="https://twitter.com/share?text=Come hang out with me in the {{community.name}} community on @withspectrum!&amp;url=https://chat.grindery.io/{{community.slug}}">Share
+                          <a class="button button-twitter" href="https://twitter.com/share?text=Come hang out with me in the {{community.name}} community on @withgrindery!&amp;url=https://chat.grindery.io/{{community.slug}}">Share
                             on Twitter</a>
                         </td>
                       </tr>
                       <tr>
                         <td>
-                          <a class="button button-facebook" href="https://www.facebook.com/sharer/sharer.php?u=https://chat.grindery.io/{{community.slug}}&amp;t=Come hang out with me in the {{community.name}} community on Spectrum!">Share
+                          <a class="button button-facebook" href="https://www.facebook.com/sharer/sharer.php?u=https://chat.grindery.io/{{community.slug}}&amp;t=Come hang out with me in the {{community.name}} community on Grindery!">Share
                             on Facebook</a>
                         </td>
                       </tr>
@@ -435,7 +435,7 @@
 
                     <div class="section-divider"></div>
                     <h2 class="section-title">Connect with our team and other community owners</h2>
-                    <p>We've created a channel on Spectrum just for community builders like you. Come join our Meta
+                    <p>We've created a channel on Grindery just for community builders like you. Come join our Meta
                       channel to talk about building communities, ask us questions, request features, or get faster
                       replies on those pesky bug reports!</p>
 
@@ -450,7 +450,7 @@
 
                     <div class="section-divider"></div>
                     <h2 class="section-title">Threads: The building blocks of communities</h2>
-                    <p>Threads are the building blocks of communities on Spectrum - they're rich posts that can contain
+                    <p>Threads are the building blocks of communities on Grindery - they're rich posts that can contain
                       text, photos, videos, embedded content, and more. Your community is new, so there aren't any
                       threads yet.</p>
 
@@ -493,11 +493,11 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://chat.grindery.io">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://chat.grindery.io">Grindery</a>.
               </p>
               <ul>
                 <li>
-                  <a href="https://twitter.com/withspectrum">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li>
@@ -505,7 +505,7 @@
                     a feature</a>
                 </li>
               </ul>
-              <p>Spectrum is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
+              <p>Grindery is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
                 States
               </p>
             </td>
