--- a/email-templates/newUserWelcome.html
+++ b/email-templates/newUserWelcome.html
@@ -306,7 +306,7 @@
 
 <body>
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    Here's what you need to know to get started on Spectrum...
+    Here's what you need to know to get started on Grindery...
   </div>
 
   <!-- Insert &zwnj;&nbsp; hack after hidden preview text -->
@@ -340,8 +340,8 @@
                 <tr>
                   <td class="content-cell">
                     <p class="emoji large">👋</p>
-                    <p>Welcome to Spectrum!</p>
-                    <p>Spectrum is a platform built to keep you connected with the communities you care about, all in
+                    <p>Welcome to Grindery!</p>
+                    <p>Grindery is a platform built to keep you connected with the communities you care about, all in
                       one simple feed.</p>
                     <p>If you want to discover communities, head on over to our <a href="https://chat.grindery.io/explore?utm_source=email&utm_campaign=welcome-email">Explore
                         page</a> to see what's popular and new.</p>
@@ -373,11 +373,11 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://chat.grindery.io">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://chat.grindery.io">Grindery</a>.
               </p>
               <ul>
                 <li>
-                  <a href="https://twitter.com/withspectrum">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li>
@@ -385,7 +385,7 @@
                     a feature</a>
                 </li>
               </ul>
-              <p>Spectrum is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
+              <p>Grindery is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
                 States
               </p>
             </td>
