--- a/email-templates/privateCommunityRequestApproved.html
+++ b/email-templates/privateCommunityRequestApproved.html
@@ -404,12 +404,12 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://chat.grindery.io">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://chat.grindery.io">Grindery</a>.
               </p>
 
               <ul>
                 <li>
-                  <a href="https://twitter.com/withspectrum">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li>
@@ -418,7 +418,7 @@
                 </li>
               </ul>
 
-              <p>Spectrum is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
+              <p>Grindery is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
                 States</p>
             </td>
           </tr>
