--- a/built-email-templates/adminCommunityCreated.html
+++ b/built-email-templates/adminCommunityCreated.html
@@ -50,7 +50,7 @@
   <ul>
     <li><a href="https://chat.grindery.io/users/{{ user.username }}">{{user.name}}</a></li>
     <li>About: {{user.description}}</li>
-    <li>Joined Spectrum: {{user.createdAt}}</li>
+    <li>Joined Grindery: {{user.createdAt}}</li>
     <li>Email: <a href="mailto:{{ user.email }}">{{user.email}}</a>
 </li>
   </ul>
