--- a/built-email-templates/validate-email.html
+++ b/built-email-templates/validate-email.html
@@ -95,12 +95,12 @@
           <tr>
             <td style="word-break:break-word">
               <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">
-                You are receiving this email because you joined <a href="https://chat.grindery.io" style="color:#1D2129; text-decoration:none">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://chat.grindery.io" style="color:#1D2129; text-decoration:none">Grindery</a>.
               </p>
 
               <ul style="line-height:1.4; margin:24px 0; padding:0; text-align:left; list-style-type:none" align="left">
                 <li style="font-size:14px; margin:8px 0">
-                  <a href="https://twitter.com/withspectrum" style="color:#1D2129; text-decoration:none">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery" style="color:#1D2129; text-decoration:none">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li style="font-size:14px; margin:8px 0">
@@ -109,7 +109,7 @@
                 </li>
               </ul>
 
-              <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">Spectrum is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA 94107<br>United
+              <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#828C99; font-size:14px; margin-top:12px" align="left">Grindery is made by GitHub, Inc.<br>88 Colin P Kelly Jr St, San Francisco, CA 94107<br>United
                 States
               </p>
             </td>
