--- a/email-templates/adminCommunityCreated.html
+++ b/email-templates/adminCommunityCreated.html
@@ -51,7 +51,7 @@
   <ul>
     <li><a href="https://chat.grindery.io/users/{{user.username}}">{{user.name}}</a></li>
     <li>About: {{user.description}}</li>
-    <li>Joined Spectrum: {{user.createdAt}}</li>
+    <li>Joined Grindery: {{user.createdAt}}</li>
     <li>Email: <a href="mailto:{{user.email}}">{{user.email}}</a></li>
   </ul>
 </body>
