--- a/email-templates/adminSlackImportProcessed.html
+++ b/email-templates/adminSlackImportProcessed.html
@@ -51,7 +51,7 @@
   <ul>
     <li><a href="https://chat.grindery.io/users/{{data.user.username}}">{{data.user.name}}</a></li>
     <li>About: {{data.user.description}}</li>
-    <li>Joined Spectrum: {{data.user.createdAt}}</li>
+    <li>Joined Grindery: {{data.user.createdAt}}</li>
     <li>Email: <a href="mailto:{{user.email}}">{{data.user.email}}</a></li>
   </ul>
 </body>
