--- a/email-templates/newDirectMessage.html
+++ b/email-templates/newDirectMessage.html
@@ -463,7 +463,7 @@
                 <tr>
                   <td class="footer-cell">
                     <p class="emoji">✌️</p>
-                    <p>- The Spectrum team</p>
+                    <p>- The Grindery team</p>
                   </td>
                 </tr>
               </table>
@@ -474,7 +474,7 @@
           <tr>
             <td class="content-cell">
               <p class="sub">
-                You are receiving this email because you joined <a href="https://chat.grindery.io">Spectrum</a>. If you no
+                You are receiving this email because you joined <a href="https://chat.grindery.io">Grindery</a>. If you no
                 longer want to receive emails like this, you can:
               </p>
 
@@ -492,14 +492,14 @@
 
                 {{#username}}
                 <li>
-                  <a href="https://chat.grindery.io/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
+                  <a href="https://chat.grindery.io/users/{{.}}/settings">Manage your email preferences on Grindery</a>
                 </li>
                 {{/username}}
               </ul>
 
               <ul>
                 <li>
-                  <a href="https://twitter.com/withspectrum">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li>
@@ -508,7 +508,7 @@
                 </li>
               </ul>
 
-              <p class="sub">Spectrum is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA
+              <p class="sub">Grindery is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA
                 94107<br /> United States</p>
             </td>
           </tr>
