--- a/email-templates/newRepliesInThreads.html
+++ b/email-templates/newRepliesInThreads.html
@@ -580,7 +580,7 @@
                 <tr>
                   <td class="signoff">
                     <p class="emoji">✌️</p>
-                    <p>- The Spectrum team</p>
+                    <p>- The Grindery team</p>
                   </td>
                 </tr>
               </table>
@@ -592,7 +592,7 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://chat.grindery.io">Spectrum</a>. If you no
+                You are receiving this email because you joined <a href="https://chat.grindery.io">Grindery</a>. If you no
                 longer want to receive emails like this, you can:
               </p>
 
@@ -611,14 +611,14 @@
 
                 {{#recipient.username}}
                 <li>
-                  <a href="https://chat.grindery.io/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
+                  <a href="https://chat.grindery.io/users/{{.}}/settings">Manage your email preferences on Grindery</a>
                 </li>
                 {{/recipient.username}}
               </ul>
 
               <ul>
                 <li>
-                  <a href="https://twitter.com/withspectrum">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li>
@@ -627,7 +627,7 @@
                 </li>
               </ul>
 
-              <p>Spectrum is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
+              <p>Grindery is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
                 States</p>
             </td>
           </tr>
