--- a/email-templates/newThreadNotification.html
+++ b/email-templates/newThreadNotification.html
@@ -491,7 +491,7 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://chat.grindery.io">Spectrum</a>. If you no
+                You are receiving this email because you joined <a href="https://chat.grindery.io">Grindery</a>. If you no
                 longer want to receive emails like this, you can:
               </p>
 
@@ -517,14 +517,14 @@
 
                 {{#recipient.username}}
                 <li>
-                  <a href="https://chat.grindery.io/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
+                  <a href="https://chat.grindery.io/users/{{.}}/settings">Manage your email preferences on Grindery</a>
                 </li>
                 {{/recipient.username}}
               </ul>
 
               <ul>
                 <li>
-                  <a href="https://twitter.com/withspectrum">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li>
@@ -533,7 +533,7 @@
                 </li>
               </ul>
 
-              <p>Spectrum is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
+              <p>Grindery is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
                 States</p>
             </td>
           </tr>
