--- a/email-templates/privateChannelRequestSent.html
+++ b/email-templates/privateChannelRequestSent.html
@@ -407,7 +407,7 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://chat.grindery.io">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://chat.grindery.io">Grindery</a>.
               </p>
 
               <ul>
@@ -423,7 +423,7 @@
 
               <ul>
                 <li>
-                  <a href="https://twitter.com/withspectrum">Follow @withspectrum on Twitter</a>
+                  <a href="https://twitter.com/withgrindery">Follow @withgrindery on Twitter</a>
                 </li>
 
                 <li>
@@ -432,7 +432,7 @@
                 </li>
               </ul>
 
-              <p>Spectrum is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
+              <p>Grindery is made by GitHub, Inc.<br />88 Colin P Kelly Jr St, San Francisco, CA 94107<br />United
                 States</p>
             </td>
           </tr>
