--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,12 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/img/apple-icon-72x72-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="%PUBLIC_URL%/img/apple-icon-114x114-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="%PUBLIC_URL%/img/apple-icon-144x144-precomposed.png" />
-
+    <style>
+      body {
+        max-width: 100%;
+        overflow-x: hidden;
+      }
+    </style>
     <!-- Google Analytics -->
     <script>
       (function(i, s, o, g, r, a, m) {
@@ -63,6 +68,142 @@
       ;if(!n._iq.hasOwnProperty(e)){n._iq[e]={_q:[]};v(n._iq[e])}return n._iq[e]}
       ;e.amplitude=n})(window,document);
     </script>
+
+    <!-- Hotjar Tracking Code for https://learn.keyy.org -->
+    <script>
+        (function(h, o, t, j, a, r) {
+            h.hj =
+                h.hj ||
+                function() {
+                    (h.hj.q = h.hj.q || []).push(arguments);
+                };
+            h._hjSettings = { hjid: 1197624, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(
+            window,
+            document,
+            'https://static.hotjar.com/c/hotjar-',
+            '.js?sv='
+        );
+    </script>
+    <!-- Start of HubSpot Embed Code -->
+    <script
+            type="text/javascript"
+            id="hs-script-loader"
+            async
+            defer
+            src="//js.hs-scripts.com/470535.js"
+    ></script>
+    <!-- End of HubSpot Embed Code -->
+    <!-- Start LuckyOrange Tracking ---->
+    <script type="text/javascript">
+        window.__lo_site_id = 141389;
+
+        (function() {
+            var wa = document.createElement('script');
+            wa.type = 'text/javascript';
+            wa.async = true;
+            wa.src = 'https://d10lpsik1i8c69.cloudfront.net/w.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(wa, s);
+        })();
+    </script>
+    <!-- End LuckyOrange -->
+    <!-- Facebook Pixel Code -->
+    <script>
+        !(function(f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function() {
+                n.callMethod
+                    ? n.callMethod.apply(n, arguments)
+                    : n.queue.push(arguments);
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s);
+        })(
+            window,
+            document,
+            'script',
+            'https://connect.facebook.net/en_US/fbevents.js'
+        );
+        fbq('init', '350063548931409');
+        fbq('track', 'PageView');
+    </script>
+    <noscript
+    ><img
+            height="1"
+            width="1"
+            style="display:none"
+            src="https://www.facebook.com/tr?id=350063548931409&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-37080412-3"
+    ></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-37080412-3');
+    </script>
+    <!-- end GA -->
+    <!-- Adroll Pixel - No-EU with no GDPR -->
+    <script type="text/javascript">
+        adroll_adv_id = 'K2LAE7GLABAZNEGQYJQ6EM';
+        adroll_pix_id = '7CPCGD6JORGJPD46RIYNJY';
+
+        (function() {
+            var _onload = function() {
+                if (
+                    document.readyState &&
+                    !/loaded|complete/.test(document.readyState)
+                ) {
+                    setTimeout(_onload, 10);
+                    return;
+                }
+                if (!window.__adroll_loaded) {
+                    __adroll_loaded = true;
+                    setTimeout(_onload, 50);
+                    return;
+                }
+                var scr = document.createElement('script');
+                var host =
+                    'https:' == document.location.protocol
+                        ? 'https://s.adroll.com'
+                        : 'http://a.adroll.com';
+                scr.setAttribute('async', 'true');
+                scr.type = 'text/javascript';
+                scr.src = host + '/j/roundtrip.js';
+                (
+                    (document.getElementsByTagName('head') || [null])[0] ||
+                    document.getElementsByTagName('script')[0].parentNode
+                ).appendChild(scr);
+            };
+            if (window.addEventListener) {
+                window.addEventListener('load', _onload, false);
+            } else {
+                window.attachEvent('onload', _onload);
+            }
+        })();
+    </script>
+    <!-- end Adroll -->
   </head>
   <body>
     <div id="root"></div>
