Updating email templates

--- a/built-email-templates/adminSlackImportProcessed.html
+++ b/built-email-templates/adminSlackImportProcessed.html
@@ -8,8 +8,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,8 +39,7 @@
 
   <p><strong>New slack import:</strong></p>
   <ul>
-    <li>Community: <a href="https://learn.keyy.org/{{ community.slug }}">{{data.community.name}}</a>
-</li>
+    <li>Community: <a href="https://learn.keyy.org/{{ community.slug }}">{{data.community.name}}</a></li>
     <li>{{data.invitedCount}} members invited</li>
     <li>Slack team name: {{data.teamName}}</li>
   </ul>
@@ -51,8 +49,7 @@
     <li><a href="https://learn.keyy.org/users/{{ data.user.username }}">{{data.user.name}}</a></li>
     <li>About: {{data.user.description}}</li>
     <li>Joined Keyy: {{data.user.createdAt}}</li>
-    <li>Email: <a href="mailto:{{ user.email }}">{{data.user.email}}</a>
-</li>
+    <li>Email: <a href="mailto:{{ user.email }}">{{data.user.email}}</a></li>
   </ul>
 </body>
 
