--- a/built-email-templates/adminUserReported.html
+++ b/built-email-templates/adminUserReported.html
@@ -8,8 +8,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,11 +41,9 @@
 
   <ul>
     <li>User being reported: <a href="https://learn.keyy.org/users/{{ reportedUser.username }}">{{reportedUser.name}}
-        (@{{reportedUser.username}})</a>
-</li>
+        (@{{reportedUser.username}})</a></li>
     <li>Reported by: <a href="https://learn.keyy.org/users/{{ reportingUser.username }}">{{reportingUser.name}}
-        (@{{reportingUser.username}})</a>
-</li>
+        (@{{reportingUser.username}})</a></li>
   </ul>
 </body>
 
