--- a/built-email-templates/newCommunityWelcome.html
+++ b/built-email-templates/newCommunityWelcome.html
@@ -12,8 +12,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,8 +60,7 @@
                 <tr>
                   <td class="content-cell" style="word-break:break-word; padding:8px 0">
                     <p class="emoji large" style="line-height:1.6; text-align:left; color:#171A21; font-size:48px; margin-top:12px; vertical-align:middle" align="left" valign="middle">✨</p>
-                    <h1 class="title" style="color:#171A21; font-size:24px; font-weight:600; margin:0; padding:0; text-align:left; margin-bottom:24px" align="left">
-<a href="https://learn.keyy.org/{{ community.slug }}" style="color:#7b16ff; text-decoration:none"><b>{{community.name}}</b></a> is
+                    <h1 class="title" style="color:#171A21; font-size:24px; font-weight:600; margin:0; padding:0; text-align:left; margin-bottom:24px" align="left"><a href="https://learn.keyy.org/{{ community.slug }}" style="color:#7b16ff; text-decoration:none"><b>{{community.name}}</b></a> is
                       live on Keyy!</h1>
                     <p style="line-height:1.4; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left">But it's pretty quiet in there right now - share {{community.name}} to get the conversation
                       started!</p>
