--- a/built-email-templates/adminCommunityCreated.html
+++ b/built-email-templates/adminCommunityCreated.html
@@ -8,8 +8,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,8 +41,7 @@
   <ul>
     <li><a href="https://learn.keyy.org/{{ community.slug }}">{{community.name}}</a></li>
     <li>About: {{community.description}}</li>
-    <li>Website: <a href="{{ community.website }}">{{community.website}}</a>
-</li>
+    <li>Website: <a href="{{ community.website }}">{{community.website}}</a></li>
   </ul>
 
   <p><strong>Creator:</strong></p>
@@ -51,8 +49,7 @@
     <li><a href="https://learn.keyy.org/users/{{ user.username }}">{{user.name}}</a></li>
     <li>About: {{user.description}}</li>
     <li>Joined Keyy: {{user.createdAt}}</li>
-    <li>Email: <a href="mailto:{{ user.email }}">{{user.email}}</a>
-</li>
+    <li>Email: <a href="mailto:{{ user.email }}">{{user.email}}</a></li>
   </ul>
 </body>
 
