--- a/built-email-templates/adminToxicContent.html
+++ b/built-email-templates/adminToxicContent.html
@@ -8,8 +8,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,20 +43,15 @@
   <p><strong>Info:</strong></p>
   <ul>
     {{#data.toxicityConfidence.perspectivePercent}}
-    <li>
-<strong>Perspective:</strong> {{.}}% confident</li>
+    <li><strong>Perspective:</strong> {{.}}% confident</li>
     {{/data.toxicityConfidence.perspectivePercent}}
   </ul>
 
   <ul>
-    <li>Sender/creator: <a href="https://learn.keyy.org/users/{{ data.user.username }}">{{data.user.name}}</a>
-</li>
-    <li>Thread: <a href="https://learn.keyy.org/thread/{{ data.thread.id }}">{{data.thread.content.title}}</a>
-</li>
-    <li>Community: <a href="https://learn.keyy.org/{{ data.community.slug }}">{{data.community.name}}</a>
-</li>
-    <li>Channel: <a href="https://learn.keyy.org/{{ data.community.slug }}/{{ data.channel.slug }}">{{data.channel.name}}</a>
-</li>
+    <li>Sender/creator: <a href="https://learn.keyy.org/users/{{ data.user.username }}">{{data.user.name}}</a></li>
+    <li>Thread: <a href="https://learn.keyy.org/thread/{{ data.thread.id }}">{{data.thread.content.title}}</a></li>
+    <li>Community: <a href="https://learn.keyy.org/{{ data.community.slug }}">{{data.community.name}}</a></li>
+    <li>Channel: <a href="https://learn.keyy.org/{{ data.community.slug }}/{{ data.channel.slug }}">{{data.channel.name}}</a></li>
   </ul>
 </body>
 
