--- a/built-email-templates/adminUserSpammingThreadsNotification.html
+++ b/built-email-templates/adminUserSpammingThreadsNotification.html
@@ -8,8 +8,7 @@
     }
   }
   END_CONFIG
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+--><html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
