Changing theme to keyy

--- a/email-templates/adminActiveCommunityReport.html
+++ b/email-templates/adminActiveCommunityReport.html
@@ -53,7 +53,7 @@
     &nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
   </div>
 
-  <p><strong>Daily active communities:</strong></p>
+  <p><strong>Daily active learning groups:</strong></p>
   <ul>
     <li>Total ({{data.dacCount}})</li>
     <li>New: <p class="green">{{data.newDac}}</p>
@@ -62,7 +62,7 @@
     </li>
   </ul>
 
-  <p><strong>Weekly active communities:</strong></p>
+  <p><strong>Weekly active learning groups:</strong></p>
   <ul>
     <li>Total ({{data.wacCount}})</li>
     <li>New: <p class="green">{{data.newWac}}</p>
@@ -71,7 +71,7 @@
     </li>
   </ul>
 
-  <p><strong>Monthly active communities:</strong></p>
+  <p><strong>Monthly active learning groups:</strong></p>
   <ul>
     <li>Total ({{data.macCount}})</li>
     <li>New: <p class="green">{{data.newMac}}</p>
