--- a/email-templates/newCommunityWelcome.html
+++ b/email-templates/newCommunityWelcome.html
@@ -436,7 +436,7 @@
                     <div class="section-divider"></div>
                     <h2 class="section-title">Connect with our team and other community owners</h2>
                     <p>We've created a channel on Keyy just for community builders like you. Come join our Meta
-                      channel to talk about building communities, ask us questions, request features, or get faster
+                      channel to talk about building learning groups, ask us questions, request features, or get faster
                       replies on those pesky bug reports!</p>
 
                     <table class="button-group" width="100%">
@@ -449,8 +449,8 @@
                     </table>
 
                     <div class="section-divider"></div>
-                    <h2 class="section-title">Threads: The building blocks of communities</h2>
-                    <p>Threads are the building blocks of communities on Keyy - they're rich posts that can contain
+                    <h2 class="section-title">Threads: The building blocks of learning groups</h2>
+                    <p>Threads are the building blocks of learning groups on Keyy - they're rich posts that can contain
                       text, photos, videos, embedded content, and more. Your community is new, so there aren't any
                       threads yet.</p>
 
