--- a/email-templates/newUserWelcome.html
+++ b/email-templates/newUserWelcome.html
@@ -341,9 +341,9 @@
                   <td class="content-cell">
                     <p class="emoji large">👋</p>
                     <p>Welcome to Keyy!</p>
-                    <p>Keyy is a platform built to keep you connected with the communities you care about, all in
+                    <p>Keyy is a platform built to keep you connected with the learning groups you care about, all in
                       one simple feed.</p>
-                    <p>If you want to discover communities, head on over to our <a href="https://learn.keyy.org/explore?utm_source=email&utm_campaign=welcome-email">Explore
+                    <p>If you want to discover learning groups, head on over to our <a href="https://learn.keyy.org/explore?utm_source=email&utm_campaign=welcome-email">Explore
                         page</a> to see what's popular and new.</p>
                     <p>We're also posting regularly in <a href="https://learn.keyy.org/spectrum?utm_source=email&utm_campaign=welcome-email">our
                         own community</a>, which is a great place to <a href="https://learn.keyy.org/spectrum/feature-requests?utm_source=email&utm_campaign=welcome-email">request
