--- a/email-templates/weeklyDigest.html
+++ b/email-templates/weeklyDigest.html
@@ -460,7 +460,7 @@
                   <td>
                     <p>&nbsp;</p>
                     <p class="reputation-string">Today’s digest highlights the top 20 conversations in your
-                      communities - but there are more active conversations waiting for you!</p>
+                      learning groups - but there are more active conversations waiting for you!</p>
                   </td>
                 </tr>
                 <tr>
@@ -479,7 +479,7 @@
 
                 <tr>
                   <td>
-                    <h2 class="discover-divider">Discover more communities:</h2>
+                    <h2 class="discover-divider">Discover more learning groups:</h2>
                   </td>
                 </tr>
                 {{/data.communities}}
