--- a/built-email-templates/privateCommunityRequestSent.html
+++ b/built-email-templates/privateCommunityRequestSent.html
@@ -87,7 +87,7 @@
                   <td class="content-cell" style="word-break:break-word">
                     <p style="line-height:1.4; margin:0; padding:0; text-align:left; color:#171A21; font-size:16px; margin-top:12px" align="left"><a href="https://learn.keyy.org/users/{{ data.user.username }}" style="color:#7B16FF; text-decoration:none">{{data.user.name}}</a>
                       has requested to join the <a href="https://learn.keyy.org/{{ data.community.slug }}" style="color:#7B16FF; text-decoration:none">{{data.community.name}}
-                        community</a>. You can approve or block this request in your community settings.</p>
+                        learning group</a>. You can approve or block this request in your learning group settings.</p>
                   </td>
                 </tr>
 
@@ -97,7 +97,7 @@
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" style="word-break:break-word; padding-right:16px">
                           <a href="https://learn.keyy.org/{{ data.community.slug }}/settings/members?filter=pending" class="button" style="color:#FFF; text-decoration:none; -webkit-text-size-adjust:none; background-color:#7B16FF; border-radius:8px; box-shadow:0 4px 8px rgba(0, 0, 0, 0.15); display:block; font-size:16px; font-weight:600; padding:12px 0; text-align:center; white-space:nowrap; word-break:keep-all; width:100%" bgcolor="#7B16FF" align="center" width="100%">
-                            Go to community settings
+                            Go to learning group settings
                           </a>
                         </td>
                       </tr>
