Meta text and icon text changes

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@withkeyy">
-    <meta name="twitter:image:alt" content="Where communities are built">
+    <meta name="twitter:image:alt" content="Where learning groups are built">
     <!-- Favicon -->
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="%PUBLIC_URL%/img/apple-icon-57x57-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/img/apple-icon-72x72-precomposed.png" />
